tests/semantic_errors/andrei29_3.tl
require "ifj21"

global name : function (integer) : string, string, string
function name    (a : integer) : string, string, string end

function main()
    local id : integer = 102
    local id1 : integer = 102
    local id2 : integer = 102
    local id3 : integer = 102
    local id4 : integer = 102

    id1, id2, id3, id4, id5 = a, b, c, f, h

    while 2 do
        while 1 do
            while 1 do
                while 1 do
                    id = 90
                    local num : string = "HAHA"
                end
            end
        end
        num = "ERR?"
    end

end

main()
